--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="page1-main.css">
+    <link rel="stylesheet" href="page2-about.css">
     <title>LCB</title>
   </head>
 
   <body>
 
 
-
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
-      <a class="navbar-brand" href="page1-main.html">
+      <a class="navbar-brand" href="page2-about.html">
       <button type="button" class="btn btn-dark">LCB</button> </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -24,9 +23,7 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="page2-about.html">About<span class="sr-only">(current)</span></a>
-          </li>
+
           <li class="nav-item">
             <a class="nav-link" href="page3-inspire.html">Gallery</a>
           </li>
@@ -34,141 +31,83 @@
             <a class="nav-link" href="page4-cooking.html">Recipes</a>
           </li>
 
-
-
         </ul>
       </div>
     </nav>
-
 
     <!-- jumbotron -->
     <div class="jumbotron jumbotron-fluid" id=jumbotron>
       <div class="container">
         <h1 class="display-4">The Latymer Cook Book</h1>
-      <h2 class="lead">BAKING RECIPES AND INSPIRATION</h2>
+
       </div>
     </div>
 
-<!-- card -->
-    <div class="card-group" >
-    <div class="card" id="minitop">
-      <img src=".jpg" class="card-img-top" alt="">
-      <div class="overlay">
-         <div class="text" id="text">
-         <a href="page.html" class="badge badge-light">TITLE</a>
-       </div>
+    <div class="container">
 
-       </div>
-    </div>
-    <div class="card" id="minitop">
-      <img src=".jpg" class="card-img-top" alt="">
-      <div class="overlay">
-         <div class="text" id="text"><a href=".html" class="badge badge-light">TITLE</a>
-         </div>
-</div>
-    </div>
-    <div class="card" id="minitop">
-      <img src="bake-brownies.jpg" class="card-img-top" alt="">
-      <div class="overlay">
-         <div class="text" id="text">
-         <a href="page.html" class="badge badge-light">TITLE</a> </div>
-</div>
-  </div>
-</div>
-</div>
-<!-- divider -->
-<div class="dropdown-divider"></div>
-
-<!-- lastest post-->
-
-  <div class="card-group" >
-  <div class="card mb-3" id="longcard1" >
-    <div class="row no-gutters">
-      <div class="col-md-4">
-        <img src="jpg" class="card-img" alt="" id="longcard">
-
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <span class="badge badge-secondary">New</span>
-
-          <h4 class="card-title">
-            <div class="alert alert-light" role="alert">
-  <a href="page.html" class="alert-link">TITLE</a>
-      </div>
-          </h4>
-
-         <h5 class="card-text"> DESCRIPTION </h5>
-
+        <div class="row">
+          <div class="column">
+            <img src="about-vanilla.jpg" alt="Snow" style="width:100%">
+          </div>
+          <div class="column">
+            <img src="about-cupcake.jpg" alt="Mountains" style="width:100%">
+          </div>
+          <div class="column">
+            <img src="about-books.jpg" alt="Mountains" style="width:100%">
+          </div><div class="column">
+            <img src="about-sugar.jpg" alt="Mountains" style="width:100%">
+          </div>
         </div>
-      </div>
+
+
+
+        <div class="card mb-3" style="background-color: aliceblue;">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <img src="lat.jpg" class="card-img" alt="..." id="lat">
     </div>
-  </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title" id=intro>Welcome to the Latymer Cook Book</h5>
+        <h5 class="card-text">
 
+          The LCB celebrates the variety of different cultures and creative styles at Latymer through cooking and baking. <br> Explore the recipe page and recreate one of the many contrasting types of food or look through the gallery for more inspiration </h5>
+        <h5>
+<br>
+      </h5>
 
-  <div class="card mb-3" id="longcard1" >
-    <div class="row no-gutters">
-      <div class="col-md-4">
-        <img src=".jpg" class="card-img" alt="" id="longcard">
-
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <span class="badge badge-secondary">New</span>
-
-          <h4 class="card-title">
-            <div class="alert alert-light" role="alert">
-  <a href="page.html" class="alert-link">TITLE</a>
-      </div>
-          </h4>
-
-         <h5 class="card-text"> DESCRIPTION </h5>
-
-        </div>
       </div>
     </div>
   </div>
 </div>
 
-
-
-
-  <div class="row row-cols-1 row-cols-md-2">
-    <div class="col mb-4">
-    <div class="card">
-      <img src=".jpg" class="card-img-top" alt="">
-      <div class="card-body">
-        <h4 class="card-title">
-          <div class="alert alert-light" role="alert">
-  <a href="page.html" class="alert-link">TITLE</a>
-  </div></h4>
-        <p class="card-text">DESCRIPTION</p>
-      </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-    <div class="card">
-      <img src="food-naan.jpeg" class="card-img-top" alt="">
-      <div class="card-body">
-        <h4 class="card-title">
-          <div class="alert alert-light" role="alert">
-<a href="page6-naan.html" class="alert-link">TITLE</a>
-</div></h4>
-  <p class="card-text">DESCRIPTION</p>
+<div class="row">
+  <div class="column">
+    <img src="about1.jpg" alt="Snow" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="about2.jpg" alt="Mountains" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="about4.jpg" alt="Mountains" style="width:100%">
 </div>
-      </div>
-      </div>
-    </div>
+<div class="column">
+  <img src="about3.jpg" alt="Mountains" style="width:100%">
+</div>
+
+</div>
+
+</div>
 
 
-
-
-
-
-
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-</body>
-
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src ="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  </body>
 </html>
+
+
+
+
